--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
+astroid==2.2.5
+autopep8==1.4.4
 Django==2.2.2
 djangorestframework==3.9.4
+isort==4.3.20
+lazy-object-proxy==1.4.1
+mccabe==0.6.1
+psycopg2==2.8.3
+pycodestyle==2.5.0
+pylint==2.3.1
+pylint-django==2.0.9
+pylint-plugin-utils==0.5
 pytz==2019.1
+six==1.12.0
 sqlparse==0.3.0
+typed-ast==1.4.0
+wrapt==1.11.2
